--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,78 +1,329 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Bebas Neue", cursive;
 }
 
-.about-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;  
-    margin-left: 10px;
-    color: #000;
+a {
+  text-decoration: none;
+  transition: all 0.5s ease-in-out;
 }
 
-.about-section {
-    width: 55%;
-    text-align: left; 
-    font-family: 'Poppins', sans-serif;
-    margin-left: 10px;
+a:hover {
+  transition: all 0.5s ease-in-out;
 }
 
-.about-section h1 {
-    color: #31846f;
-    font-size: 28px;
-    line-height: 1.2; 
-    font-weight: bold;
-    margin-bottom: 24px;
+.we-are-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  height: 900px;
 }
 
-.about-section p {
-    color: #31846f;
-    font-size: 15px;
-    margin-bottom: 48px;
+@media screen and (max-width: 860px) {
+  .we-are-block {
+    height: 2200px;
+  }
 }
 
-.right-img {
+@media screen and (max-width: 500px) {
+  .we-are-block {
+    height: 2300px;
+  }
+}
+
+#about-us-section {
+  background: #0d8a3d;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+@media screen and (max-width: 860px) {
+  #about-us-section {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+.about-us-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 860px) {
+  .about-us-image {
     position: relative;
-    justify-content: center;
-    align-self: center;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    max-width: 30%; 
-    margin-right: 0; 
-    margin-bottom: 50px; 
-    box-shadow: 10px 10px 5px black;
-    border-radius: 20px;
-    overflow: hidden;
-}
-
-.right-img img {
     width: 100%;
-    height: auto;
-    transition: all 0.5s ease-in-out;
-    object-fit: cover;
-    left: 20px;
+    height: 45%;
+  }
 }
 
+@media screen and (max-width: 747px) {
+  .about-us-image {
+    height: 35%;
+  }
+}
 
-@media only screen and (max-width: 768px) {
-    .about-container {
-        flex-direction: column;
-        text-align: center;
-    }
+@media screen and (max-width: 644px) {
+  .about-us-image img {
+    position: absolute;
+    left: -220px;
+  }
+}
 
-    .about-section {
-        width: 90%;
-        margin-left: 0;
-        margin-top: 30px;
-    }
+.about-us-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-evenly;
+  width: 40%;
+  height: 80%;
+  margin-right: 850px;
+  margin-left: 12px;
+  z-index: 2;
+}
 
-    .right-img {
-        margin-right: 0;
-        width: 100%;
-        max-width: none;
-    }
+@media screen and (max-width: 1353px) {
+  .about-us-info {
+    margin-right: 400px;
+    width: 60%;
+    background: #0c4c9199;
+    padding: 0px 25px 0px 0px;
+  }
+}
+
+@media screen and (max-width: 1238px) {
+  .about-us-info {
+    margin-right: 340px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1111px) {
+  .about-us-info {
+    margin-right: 270px;
+  }
+}
+
+@media screen and (max-width: 910px) {
+  .about-us-info {
+    margin-right: 150px;
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .about-us-info {
+    margin: 0px 0px 0px 0px !important;
+    padding: 0px 20px 0px 20px !important;
+    width: 100%;
+    height: 55%;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 747px) {
+  .about-us-info {
+    height: 65%;
+  }
+}
+
+.about-us-info h2 {
+  color: white;
+  font-size: 40pt;
+  text-align: right;
+}
+
+@media screen and (max-width: 860px) {
+  .about-us-info h2 {
+    text-align: center;
+  }
+}
+
+.about-us-info p {
+  color: white;
+  font-size: 14pt;
+  text-align: right;
+}
+
+@media screen and (max-width: 860px) {
+  .about-us-info p {
+    text-align: center;
+  }
+}
+
+.about-us-info a {
+  background-color: white;
+  color: #0c9148;
+  width: 180px;
+  text-align: center;
+  padding: 15px 0px 15px 0px;
+  font-size: 14pt;
+  box-shadow: rgb(23, 171, 85) 0px 20px 30px -10px;
+}
+
+.about-us-info a:hover {
+  background: #0f940f;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  transform: translateY(10px);
+}
+
+#history-section {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+@media screen and (max-width: 860px) {
+  #history-section {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+.history-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 820px;
+  height: 100%;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 860px) {
+  .history-image {
+    position: relative;
+    width: 100%;
+    height: 40%;
+  }
+}
+
+@media screen and (max-width: 747px) {
+  .history-image {
+    height: 35%;
+  }
+}
+
+@media screen and (max-width: 644px) {
+  .history-image img {
+    position: absolute;
+    right: -220px;
+  }
+}
+
+.history-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  width: 40%;
+  height: 80%;
+  margin-left: 850px;
+  margin-right: 12px;
+  z-index: 2;
+}
+
+@media screen and (max-width: 1353px) {
+  .history-info {
+    margin-left: 400px;
+    width: 60%;
+    background: #ffffff99;
+    padding: 0px 0px 0px 25px;
+  }
+}
+
+@media screen and (max-width: 1238px) {
+  .history-info {
+    margin-left: 340px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1111px) {
+  .history-info {
+    margin-left: 270px;
+  }
+}
+
+@media screen and (max-width: 910px) {
+  .history-info {
+    margin-left: 150px;
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .history-info {
+    margin: 0px 0px 0px 0px !important;
+    padding: 0px 40px 0px 40px !important;
+    width: 100%;
+    height: 60%;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 747px) {
+  .history-info {
+    height: 65%;
+  }
+}
+
+.history-info h2 {
+  color: #0c4c91;
+  font-size: 40pt;
+  text-align: left;
+}
+
+@media screen and (max-width: 860px) {
+  .history-info h2 {
+    text-align: center;
+  }
+}
+
+.history-info p {
+  color: #0c4c91;
+  font-size: 14pt;
+  text-align: left;
+}
+
+@media screen and (max-width: 860px) {
+  .history-info p {
+    text-align: center;
+  }
+}
+
+.history-info a {
+  background-color: #0c9143;
+  color: white;
+  width: 180px;
+  text-align: center;
+  padding: 15px 0px 15px 0px;
+  font-size: 14pt;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.history-info a:hover {
+  background: #404140;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  transform: translateY(10px);
 }
