--- a/src/Components/AdvanceSearch.css
+++ b/src/Components/AdvanceSearch.css
@@ -3,13 +3,15 @@
     display: flex;
     justify-content: center; 
     align-items: center; 
-    height: 100vh; 
     padding: 20px;
+    min-height: 100vh; 
+    
 }
 
 /* Results container */
 .results-container {
     text-align: center;
+    height: 100vh;
 }
 
 
@@ -38,7 +40,9 @@
     border: none;
     border-radius: 5px!important;
     width: 138px;
-    padding: 10px 20px;
+    padding-top: 1px;
+    padding-bottom: 0px;
+    
     cursor: pointer;
     margin-top: 20px;
     margin-bottom: 61px;
