--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -39,7 +39,7 @@ a:hover {
 }
 
 #about-us-section {
-  background: #0d8a3d;
+  background: #083f9f;
   width: 100%;
   height: 50%;
   display: flex;
