--- a/src/Components/AdvanceSearch.css
+++ b/src/Components/AdvanceSearch.css
@@ -1,14 +1,14 @@
-
+/* 
 .advance-search-container {
     display: flex;
     justify-content: center; 
     align-items: center; 
     padding: 20px;
-    min-height: 100vh; 
+    min-height: 30vh; 
     
 }
 
-/* Results container */
+
 .results-container {
     text-align: center;
     height: 100vh;
@@ -33,7 +33,6 @@
     margin-bottom: 10px;
 }
 
-/* Button styles */
 .Advance-search-buts {
     background-color: #007bff;
     color: #fff;
@@ -52,7 +51,7 @@
     background-color: #0056b3;
 }
 
-/* Media queries for responsive design */
+
 @media screen and (max-width: 768px) {
     .advance-search-container {
         padding: 10px;
@@ -74,4 +73,104 @@
         padding: 8px 16px;
         margin-bottom: 10px;
     }
-}
+} */
+
+/* AdvanceSearch.css */
+
+.advance-search-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    min-height: 80vh;
+  }
+  
+  .results-container {
+    text-align: center;
+    height: 50vh;
+  }
+  .reusmebulider h3{
+    padding-bottom: 10px;
+    margin-bottom: 13px 
+  }
+  
+  .AdvanceData {
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+  .AdvanceData h1 {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+  .AdvanceData p {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  
+  .Advance-search-buts {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px!important;
+    width: 138px;
+    padding-top: 1px;
+    padding-bottom: 0px;
+    cursor: pointer;
+    /* margin-top: 20px; */
+    margin-bottom: 71px;
+  }
+  
+  .Advance-search-button:hover {
+    background-color: #0056b3;
+  }
+  
+  /* Styles for Resume Builder */
+  .resumebulider {
+    margin-top: 20px;
+  }
+  
+  .resumechild {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .resume {
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-align: center;
+    display: inline-block;
+  }
+  
+  /* Media Queries for Responsive Design */
+  
+  @media screen and (max-width: 768px) {
+    .advance-search-container {
+      padding: 10px;
+    }
+  
+    .AdvanceData {
+      padding: 15px;
+    }
+  
+    .AdvanceData h1 {
+      font-size: 16px;
+    }
+  
+    .AdvanceData p {
+      font-size: 14px;
+    }
+  
+    .Advance-search-button {
+      padding: 8px 16px;
+      margin-bottom: 10px;
+    }
+  }
+  
