--- a/src/Components/SearchView.css
+++ b/src/Components/SearchView.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-left: 220px;
+  /* padding-left: 220px; */
 }
 
 
