--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -44,8 +44,12 @@ color: green;
 }
 
 .contacttext{
- 
-  padding: 40px;
+  border-radius: 5px;
+    min-width:  60%;
+    max-width: 60%;
+    height: 550px;
+    font-size: 18px; 
+  
 }
 @media (max-width: 767px) {
   .formContact {
