--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,9 +1,6 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+/* 
+
+h1, h2, h3, h4, h5, h6 {
   font-family: "Bebas Neue", cursive;
 }
 
@@ -16,314 +13,102 @@ a:hover {
   transition: all 0.5s ease-in-out;
 }
 
+/* Container for sections */
 .we-are-block {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-wrap: nowrap;
   width: 100%;
-  height: 900px;
-}
-
-@media screen and (max-width: 860px) {
-  .we-are-block {
-    height: 2200px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .we-are-block {
-    height: 2300px;
-  }
-}
-
-#about-us-section {
-  background: #083f9f;
-  width: 100%;
-  height: 50%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-@media screen and (max-width: 860px) {
-  #about-us-section {
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
-
-.about-us-image {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  overflow: hidden;
-}
-
-@media screen and (max-width: 860px) {
-  .about-us-image {
-    position: relative;
-    width: 100%;
-    height: 45%;
-  }
-}
-
-@media screen and (max-width: 747px) {
-  .about-us-image {
-    height: 35%;
-  }
-}
-
-@media screen and (max-width: 644px) {
-  .about-us-image img {
-    position: absolute;
-    left: -220px;
-  }
-}
-
-.about-us-info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-evenly;
-  width: 40%;
-  height: 80%;
-  margin-right: 850px;
-  margin-left: 12px;
-  z-index: 2;
-}
-
-@media screen and (max-width: 1353px) {
-  .about-us-info {
-    margin-right: 400px;
-    width: 60%;
-    background: #0c4c9199;
-    padding: 0px 25px 0px 0px;
-  }
-}
-
-@media screen and (max-width: 1238px) {
-  .about-us-info {
-    margin-right: 340px;
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 1111px) {
-  .about-us-info {
-    margin-right: 270px;
-  }
-}
-
-@media screen and (max-width: 910px) {
-  .about-us-info {
-    margin-right: 150px;
-  }
-}
-
-@media screen and (max-width: 860px) {
-  .about-us-info {
-    margin: 0px 0px 0px 0px !important;
-    padding: 0px 20px 0px 20px !important;
-    width: 100%;
-    height: 55%;
-    align-items: center;
-  }
-}
-
-@media screen and (max-width: 747px) {
-  .about-us-info {
-    height: 65%;
-  }
-}
-
-.about-us-info h2 {
-  color: white;
-  font-size: 40pt;
-  text-align: right;
-}
-
-@media screen and (max-width: 860px) {
-  .about-us-info h2 {
-    text-align: center;
-  }
-}
-
-.about-us-info p {
-  color: white;
-  font-size: 14pt;
-  text-align: right;
-}
-
-@media screen and (max-width: 860px) {
-  .about-us-info p {
-    text-align: center;
-  }
-}
-
-.about-us-info a {
-  background-color: white;
-  color: #0c9148;
-  width: 180px;
+  height: auto; /* Height set to auto for responsiveness */
   text-align: center;
-  padding: 15px 0px 15px 0px;
-  font-size: 14pt;
-  box-shadow: rgb(23, 171, 85) 0px 20px 30px -10px;
 }
 
-.about-us-info a:hover {
-  background: #0f940f;
-  color: white;
-  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-  transform: translateY(10px);
-}
-
-#history-section {
+/* Section styling */
+.section {
   width: 100%;
-  height: 50%;
+  height: auto; /* Height set to auto for responsiveness */
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap; /* Allow sections to wrap on smaller screens */
   align-items: center;
   justify-content: center;
   position: relative;
+  margin-bottom: 50px; /* Add margin between sections */
 }
 
-@media screen and (max-width: 860px) {
-  #history-section {
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
-
+/* Image styling */
+.about-us-image,
 .history-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  max-width: 820px;
-  height: 100%;
-  overflow: hidden;
+  width: 50%;
+  height: auto; /* Allow image to adjust height based on width */
 }
 
-@media screen and (max-width: 860px) {
-  .history-image {
-    position: relative;
-    width: 100%;
-    height: 40%;
-  }
+.history-image{
+  width:620px;
+   height:433;
 }
-
-@media screen and (max-width: 747px) {
-  .history-image {
-    height: 35%;
-  }
+.history-image img{
+  width:100% ;
+  height:100% ;
+  object-fit: cover;
 }
-
-@media screen and (max-width: 644px) {
-  .history-image img {
-    position: absolute;
-    right: -220px;
-  }
+.about-us-image{
+  width:644;
+   height:458;
 }
-
+.about-us-image img{
+  width:100% ;
+  height:100% ;
+  object-fit: cover;
+}
+/* Information container */
+.about-us-info,
 .history-info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-evenly;
-  width: 40%;
-  height: 80%;
-  margin-left: 850px;
-  margin-right: 12px;
-  z-index: 2;
+  width: 50%;
+  text-align: center; /* Center text for smaller screens */
+  padding: 0 20px; /* Add padding for smaller screens */
 }
 
-@media screen and (max-width: 1353px) {
-  .history-info {
-    margin-left: 400px;
-    width: 60%;
-    background: #ffffff99;
-    padding: 0px 0px 0px 25px;
-  }
-}
-
-@media screen and (max-width: 1238px) {
-  .history-info {
-    margin-left: 340px;
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 1111px) {
-  .history-info {
-    margin-left: 270px;
-  }
-}
-
-@media screen and (max-width: 910px) {
-  .history-info {
-    margin-left: 150px;
-  }
-}
-
-@media screen and (max-width: 860px) {
-  .history-info {
-    margin: 0px 0px 0px 0px !important;
-    padding: 0px 40px 0px 40px !important;
-    width: 100%;
-    height: 60%;
-    align-items: center;
-  }
-}
-
-@media screen and (max-width: 747px) {
-  .history-info {
-    height: 65%;
-  }
-}
-
+/* Heading styling */
+.about-us-info h2,
 .history-info h2 {
-  color: #0c4c91;
-  font-size: 40pt;
-  text-align: left;
+  font-size: 2.5rem; /* Adjust font size for smaller screens */
 }
 
-@media screen and (max-width: 860px) {
-  .history-info h2 {
-    text-align: center;
-  }
-}
-
+/* Paragraph styling */
+.about-us-info p,
 .history-info p {
-  color: #0c4c91;
-  font-size: 14pt;
-  text-align: left;
+  font-size: 1rem; /* Adjust font size for smaller screens */
 }
 
-@media screen and (max-width: 860px) {
-  .history-info p {
-    text-align: center;
-  }
-}
-
+/* Button styling */
+.about-us-info a,
 .history-info a {
+  display: inline-block;
   background-color: #0c9143;
   color: white;
   width: 180px;
-  text-align: center;
-  padding: 15px 0px 15px 0px;
-  font-size: 14pt;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  padding: 15px 0;
+  font-size: 1rem; /* Adjust font size for smaller screens */
+  margin-top: 20px; /* Add margin between paragraphs and button */
 }
 
+/* Hover effect */
+.about-us-info a:hover,
 .history-info a:hover {
   background: #404140;
-  color: white;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
   transform: translateY(10px);
 }
+
+/* Media query for smaller screens */
+@media screen and (max-width: 860px) {
+  .about-us-image,
+  .history-image,
+  .about-us-info,
+  .history-info {
+    width: 100%; /* Adjust width for smaller screens */
+    padding: 20px; /* Add padding for smaller screens */
+  }
+} 
