--- a/src/Components/Window.css
+++ b/src/Components/Window.css
@@ -4,7 +4,7 @@
     left: 15px;
     z-index: 1000;
     height: 50px;
-    width: 50px;
+    width: 50px!important;
     border-radius: 50%;
     
     background-color: #13a044 !important; 
