--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -13,11 +13,11 @@ color: green;
 
 .formContact {
   flex-direction: column;
-  width: 100%;
-  max-width: 400px; 
-  padding: 20px;
-  border: 1px solid #ccc;
+  display: flex;
+  justify-content: flex-start;
+  /* border: 1px solid #ccc; */
   border-radius: 5px;
+  max-width:90% ;
 
 }
 
@@ -31,8 +31,8 @@ color: green;
 }
 
 .contactinput {
-  width: 100%;
-  height: 100px; 
+  /* width: 100%;
+  height: 100px;  */
   margin-bottom: 15px;
   padding: 10px;
   border: 1px solid #ccc;
@@ -43,17 +43,17 @@ color: green;
   text-align: center;
 }
 
-.contacttext{
+ .formContact>.contacttext{
   border-radius: 5px;
     min-width:  60%;
-    max-width: 60%;
-    height: 550px;
+   
+    /* height: 550px; */
     font-size: 18px; 
   
 }
 @media (max-width: 767px) {
   .formContact {
-    max-width: 90%; 
+    /* max-width: 90%;  */
   }
 }
 
