--- a/src/Components/EmployerLogin.css
+++ b/src/Components/EmployerLogin.css
@@ -1,98 +1,91 @@
-*{
-    padding: 0px;
-    margin: 0px;
-   
+.Employer-login {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+
+  margin-bottom: 30px;
+  margin-top: 10px;
+  align-items: center;
 
 }
-.Employer-login{
-    width: 100%;
-    /* height: 100vh; */
-    display: flex;
-    flex-direction: column;
-    /* flex-wrap: wrap; */
-    margin-bottom: 30px;
-    margin-top:10px ;
-    align-items: center;
+.employerLink {
+  text-decoration: none;
+  color: #585b77 !important;
+}
+
+.employeimage-parents {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:300px!important;
+  padding-top: 40px;
+}
+.employeeimage-child {
+ width:500px ;
+ 
   
-       min-height: 100vh;
-   
-    }
-.employerLink{
-    text-decoration: none;
-    color: #585b77!important
+}
+.employeform > h1 {
+    margin-bottom:15px ;
+}
+
+  
+.employeeimage-child img {
+  height: 100%;
+  width: 100%;
+}
+.employeform1 {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 90%;
+  padding: 0 50px;
+  text-align: center;
+  flex-direction: row;
+  
 
 }
-   
+.employeeinputs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.employeimage-parents{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-.employeeimage-child{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 416px;
-    height: 421px;
-    /* margin-top: 100px; */
-}
-.employeeimage-child img{
-    height: 100%;
-    width: 100%;
+  min-width: 320px;
+  padding: 10px;
 
+  margin-bottom: 10px;
 }
-.employeform{
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  border-radius:15px;
-  box-shadow: 0px 8px 16px 0px rgba(
-    0, 0, 0, 0.2);
-    height: 780px;
-    width: 876px;
-    text-align: center;
-    
+.employbtn {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.employerbtn {
+  height: 30px;
+  width: 160px;
+}
+.employ a {
+  color: blue !important;
+}
 
-    
-    
-   
 
-}
-.employeeinputs{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 50px;
-   width: 350px;
-   padding-top: 10px;
-    padding-bottom: 5px;
-    padding-left: 19px;
-}
-.employbtn{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-
-}
-.employerbtn{
-    height: 30px;
-    width: 160px;
-}
-.employ a{
-    color: blue!important;
-}
-@media only screen and(max-width: 780px) {
-    .employeform{
-        flex-direction: column!important;
-        display: flex;
-       
-    }.employeeimage-child{
-
+@media only screen and (max-width: 480px) {
+  
+  .employeform > h1 {
+    margin:20px 0 10px 0 ;
+    font-size:1.5rem ;
+  }
+  .employeeimage-child {
     height: 229px;
-    margin-top: 266px;
-    } 
+    margin-top: 20px;
+  }  
+  .employeform1 {
+    flex-direction: column!important;
+    width: 100%;
+    justify-content: center;
+    padding: 0 15px;
+    
+    
+  }
 }
-
