--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -63,13 +63,18 @@
   width: 70px;
  bottom: 93%;
 
-  height: 20px;
+  /* height: 20px; */
   background-color:white; 
   color: rgb(25, 168, 0);
-  padding: 4px 16px;
+  padding: 4px 16px!important;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  text-align: center;
+}
+.logout:hover{
+  background-color: white;
+  color:black;
 }
 
 /* Responsive styles */
